--- a/ST.html
+++ b/ST.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FirstWeb</title>
+    <title>Swatix</title>
 </head>
 
 <body>
      <table border="1" align="center" width="1300" height="650" style="color:rgb(29, 200, 120)">
         <th colspan="3">
-            <img src="/BCACA.png">
+            <img src="BCACA.png">
             <tr><br>
                 <th colspan="3" height="100">Navigation Menu
                     <br>
@@ -22,11 +22,11 @@
         </th>
 
         <tr>
-            <th> <img src="/website-under-construction-illustration-vector.webp" width="80%"> </th>
+            <th> <img src="website-under-construction-illustration-vector.webp" width="80%"> </th>
             <th>
-                <img src="/canoeing.jpg" alt="" width="80%">
+                <img src="canoeing.jpg" alt="" width="80%">
             </th>
-            <th><img src="/website-under-construction-illustration-vector.webp" width="80%"> </th>
+            <th><img src="website-under-construction-illustration-vector.webp" width="80%"> </th>
         </tr>
         <tr>
             <th colspan="3">
