--- a/webpage3.html
+++ b/webpage3.html
@@ -9,7 +9,7 @@
 <body>
     <table border="3" cellpadding="5">
         <th rowspan="2" width="15%" bgcolor="white">
-            <img src="/img/rsk.png" alt="logo" align="center" >
+            <img src="rsk.png" alt="logo" align="center" >
             
         <th colspan="2" height="80" align="right">
                                <button>
@@ -36,11 +36,11 @@
                        </th>
                         </tr><th height="10">0
                             <th rowspan="10" >
-                                <img src="/pexels-pixabay-267507.jpg" alt=""  height="700" width="1100">
+                                <img src="pexels-pixabay-267507.jpg" alt=""  height="700" width="1100">
                             </th>
                             <th rowspan="10" width="15%" bgcolor="skyblue">
                                 <marquee behavior="scroll" direction="right" scrollamount="30" height="650" width="220">
-                                    <img src="/img/under-construction-page-plugin-blogvault_5.png" alt="">
+                                    <img src="under-construction-page-plugin-blogvault_5.png" alt="">
                                 </marquee>
                                 </th>
                             <tr><td align="center" height="10"><b>1</b></td></tr>
@@ -54,19 +54,19 @@
                             <tr height="250" width="100">
                             <td align="center" bgcolor="white">
                                 <marquee behavior="scroll" direction="down" scrollamount="11" width="90" height="400"><img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
-                                    <img src="/img/size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
+                                    <img src="size.jpg" alt="" height="90">
                                 </marquee>
                             </td>
                         </th>
