--- a/webpage4.html
+++ b/webpage4.html
@@ -97,7 +97,7 @@
             
      </tr>     
            <th colspan="2">
-           <pre> <img src="/n2.png" alt="" align="left,down" height="30 " width="" > <marquee behavior="scroll" direction="Left" scrollamount="10"  width="1200" style="color:blue"><font size="6"> Summer 2022 Days & Date wise for final Time Table for State Government  Approved Short Term. Academic Calender 2022-23 Summer 2022 Days & Date wise for final Time Table for State Government  Approved Short Term. Academic Calender 2022-23</font></marquee><img src="/doubblearrow.png" alt="" height="35" align="right"> <img src="/pause.jfif" alt="" height="40" align="right">                </pre>
+           <pre> <img src="n2.png" alt="" align="left,down" height="30 " width="" > <marquee behavior="scroll" direction="Left" scrollamount="10"  width="1200" style="color:blue"><font size="6"> Summer 2022 Days & Date wise for final Time Table for State Government  Approved Short Term. Academic Calender 2022-23 Summer 2022 Days & Date wise for final Time Table for State Government  Approved Short Term. Academic Calender 2022-23</font></marquee><img src="doubblearrow.png" alt="" height="35" align="right"> <img src="pause.jfif" alt="" height="40" align="right">                </pre>
            </th> 
        
            <tr>
